<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jcdug.andnonogame.MenuActivity"
    android:background="@drawable/background">

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.example.jcdug.andnonogame.BarFragment"
        android:id="@+id/fragment_bar_puzzle_select"
        tools:layout="@layout/fragment_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Normal Puzzles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/normal_puzzles_button"
        android:onClick="onClicked"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textAllCaps="false"
        android:layout_below="@+id/fragment_bar_puzzle_select"
        android:layout_marginTop="68dp" />

    <Button
        android:text="Color Puzzles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/color_puzzles_button"
        android:onClick="onClicked"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textAllCaps="false"
        android:layout_below="@+id/normal_puzzles_button"
        android:layout_marginTop="36dp" />

    <Button
        android:text="Create Your Own Puzzles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_own_button"
        android:onClick="onClicked"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="79dp"
        android:layout_alignTop="@+id/color_puzzles_button"
        android:layout_below="@id/color_puzzles_button"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false" />


    <Button
        android:text="Download Puzzles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/download_puzzles_button"
        android:onClick="onClicked"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="79dp"
        android:layout_alignTop="@+id/create_own_button"
        android:layout_below="@id/create_own_button"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false" />

</RelativeLayout>
