<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.jcdug.andnonogame.MainActivity">


    <TextView
        android:text="By"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/by_text"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/nonograms_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Josh and Peter"
        android:textSize="34sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/j_and_p_text"
        android:layout_below="@+id/by_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Nonograms"
        android:textSize="45sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nonograms_text"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

 <!--   <Button
        android:text="Play"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:id="@+id/button"
        android:background="@drawable/playbutton"
        android:onClick="onPlayClicked"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
-->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_main"
        android:id="@+id/settings_button_main"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClick"
        android:elevation="0dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_button"
        android:onClick="onClick"
        android:id="@+id/play_button_main"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:clickable="true"
        android:layout_below="@+id/tutorial_button"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp">

    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:background="@drawable/border_button"
        android:onClick="onClick"
        android:layout_alignTop="@+id/sign_in_button"
        android:layout_alignEnd="@+id/sign_in_button" />

    <Button
        android:text="Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:id="@+id/tutorial_button"
        android:background="@drawable/border_button"
        android:onClick="onClick"
        android:layout_below="@+id/play_button_main"
        android:layout_alignEnd="@+id/sign_in_button" />

</RelativeLayout>
