<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_own"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jcdug.andnonogame.CreateOwnActivity"
    android:background="@drawable/background">

    <Button
        android:text="Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_create"
        android:textAllCaps="false"
        android:onClick="onClicked"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goto_create"
        android:textAllCaps="false"
        android:onClick="onClicked"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/cancel_create"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_puzzle_size"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/spinner_border"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Choose a size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_choose_size"
        android:textSize="34sp"
        android:textColor="#000000"
        android:layout_marginBottom="100dp"
        android:layout_above="@+id/choose_puzzle_size"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back_bar"
        android:id="@+id/back_button_create"
        android:layout_gravity="left"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClicked" />

    <CheckBox
        android:text="Color Puzzle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="17dp"
        android:id="@+id/isColorCheckBox"
        android:layout_below="@+id/choose_puzzle_size"
        android:layout_above="@+id/goto_create"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp" />
</RelativeLayout>
