...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEBCA">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_tutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jcdug.andnonogame.TutorialActivity">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back_bar"
        android:id="@+id/back_button_tutorial"
        android:layout_gravity="left"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClicked" />

    <TextView
        android:text="How To Play Nonograms"
...
